# fictional_names_package

./: README.md  pyproject.toml
src/fictional_names/: .gitignore  README.md  arab.py  aztec.py  chinese.py  dragonborn.py  drow.py  dwarven.py  elven.py  english.py  erikson.py  germanic.py  giant.py  gnomish.py  greek.py  halfling.py  human.py  japanese.py  jordan.py  martin.py  mongolian.py  name_generator.py  norsemen.py  orc.py  roman.py  rowling.py  sapkowski.py  slavic.py  steampunk.py  supportive_functions.py  tolkien.py  turkish.py  viking.py
