[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fictional_names"
version = "0.0.7"
authors = [
  { name="a-tsagkalidis", email="arg.tsag@gmail.com" },
]
description = "A package for generating fictional names"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"