[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fictional_names"
version = "1.0.0"
authors = [
  { name="a-tsagkalidis", email="arg.tsag@gmail.com" },
]
description = "A package for generating fictional names."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/a-tsagkalidis/fictional_names_package"
"Bug Tracker" = "https://github.com/a-tsagkalidis/fictional_names_package/issues"